<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_background_setting_alarm">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_48"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/editAlarmName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/color_silver"
                android:hint="@string/text_hint_alarm_setting"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:textColor="@color/color_white"
                app:backgroundTint="@color/color_silver"
                app:layout_constraintTop_toBottomOf="@id/recyclerDay"/>

        <TextView
                android:id="@+id/textAlarmSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_alarm_sound_title"
                app:layout_constraintTop_toBottomOf="@id/editAlarmName"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/TextSettingAlarm"/>

        <TextView
                android:id="@+id/textAlarmSoundDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_alarm_sound_content"
                app:layout_constraintTop_toBottomOf="@id/textAlarmSound"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/TextSettingAlarmDetail"/>

        <View
                android:id="@+id/viewLineSound"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                app:layout_constraintTop_toBottomOf="@id/textAlarmSoundDetail"
                style="@style/ViewHorizontalLine"/>

        <View
                android:id="@+id/viewTransparentSound"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/editAlarmName"
                app:layout_constraintBottom_toTopOf="@id/viewLineSound"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        <TextView
                android:id="@+id/textVibrateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_vibration_title"
                app:layout_constraintTop_toBottomOf="@id/viewLineSound"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/TextSettingAlarm"/>

        <Switch
                android:id="@+id/switchVibration"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/textVibrateTitle"
                app:layout_constraintBottom_toBottomOf="@id/textVibrateContent"
                app:layout_constraintDimensionRatio="2:1"
                android:paddingRight="@dimen/dp_16"/>

        <TextView
                android:id="@+id/textVibrateContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_vibration_content"
                app:layout_constraintTop_toBottomOf="@id/textVibrateTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/TextSettingAlarmDetail"/>

        <View
                android:id="@+id/viewLineVibration"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                app:layout_constraintTop_toBottomOf="@id/textVibrateContent"
                style="@style/ViewHorizontalLine"/>

        <View
                android:id="@+id/viewTransparentVibration"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/viewLineSound"
                app:layout_constraintBottom_toTopOf="@id/viewLineVibration"
                app:layout_constraintRight_toLeftOf="@id/switchVibration"
                app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
                android:id="@+id/textMethodTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_alarm_off_method_title"
                app:layout_constraintTop_toBottomOf="@id/viewLineVibration"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/TextSettingAlarm"/>

        <TextView
                android:id="@+id/textMethodContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_vibration_content"
                app:layout_constraintTop_toBottomOf="@id/textMethodTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/TextSettingAlarmDetail"/>

        <View
                android:id="@+id/viewTransparentMethod"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/viewLineVibration"
                app:layout_constraintBottom_toBottomOf="@id/textMethodContent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        <TextView
                android:id="@+id/levelEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_level_easy"
                app:layout_constraintTop_toBottomOf="@id/textMethodContent"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/TextSettingAlarmDetail"/>

        <TextView
                android:id="@+id/levelHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_level_hard"
                app:layout_constraintTop_toBottomOf="@id/textMethodContent"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/TextSettingAlarmDetail"/>

        <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:thumbTint="@color/color_silver"
                app:layout_constraintLeft_toRightOf="@id/levelEasy"
                app:layout_constraintRight_toLeftOf="@id/levelHard"
                app:layout_constraintBottom_toTopOf="@+id/viewLineMethod"
                app:layout_constraintTop_toBottomOf="@+id/textMethodContent"
                app:layout_constraintVertical_bias="0.42000002"/>

        <View
                android:id="@+id/viewLineMethod"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                app:layout_constraintTop_toBottomOf="@id/levelEasy"
                style="@style/ViewHorizontalLine"/>

        <TextView
                android:id="@+id/textSnoozeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_snooze_title"
                app:layout_constraintTop_toBottomOf="@id/viewLineMethod"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/TextSettingAlarm"/>

        <TextView
                android:id="@+id/textSnoozeContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_snooze_content"
                android:paddingBottom="@dimen/dp_16"
                app:layout_constraintTop_toBottomOf="@id/textSnoozeTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/TextSettingAlarmDetail"/>

        <Switch
                android:id="@+id/switchSnooze"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/textSnoozeTitle"
                app:layout_constraintBottom_toBottomOf="@id/textSnoozeContent"
                app:layout_constraintDimensionRatio="2:1"
                android:paddingRight="@dimen/dp_16"/>

        <View
                android:id="@+id/viewTransparentSnooze"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/viewLineMethod"
                app:layout_constraintBottom_toBottomOf="@id/textSnoozeContent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/switchSnooze"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
