<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_black"
        tools:context=".ui.detail.DetailActivity">

    <fragment
            android:id="@+id/fragSettingAlarm"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:name="com.asterisk.tuandao.alarmstudy.ui.detail.DetailFragment"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toTopOf="@+id/guideHorizontal"
            app:layout_constraintBottom_toTopOf="@id/buttonSave"
            app:layout_constraintRight_toRightOf="parent"/>

    <android.support.constraint.Guideline
            android:id="@+id/guideHorizontal"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.4"/>

    <Button
            android:id="@+id/buttonCancel"
            android:text="@string/action_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/fragSettingAlarm"
            app:layout_constraintHorizontal_chainStyle="packed"
            style="@style/ButtonSettingStyle"/>

    <Button
            android:id="@+id/buttonSave"
            android:text="@string/action_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toEndOf="@id/buttonCancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragSettingAlarm"
            style="@style/ButtonSettingStyle"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textAlarmHour"
            app:layout_constraintEnd_toStartOf="@+id/guideHourHorizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideHorizontal"
            tools:text="@string/fake_hour"
            style="@style/TextTimePicker"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textColon"
            tools:text="@string/fake_colon"
            style="@style/TextTimePicker"
            app:layout_constraintStart_toEndOf="@+id/textAlarmHour"
            app:layout_constraintEnd_toStartOf="@+id/guideMinuteHorizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideHorizontal"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textAlarmMinute"
            tools:text="@string/fake_minute"
            style="@style/TextTimePicker"
            app:layout_constraintStart_toStartOf="@+id/guideMinuteHorizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideHorizontal"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideHourHorizontal"
            app:layout_constraintGuide_percent="0.4"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideMinuteHorizontal"
            app:layout_constraintGuide_percent="0.6"/>

</android.support.constraint.ConstraintLayout>
